Bug 1207326 - Part 1: Correct projection clipping rectangle. r=matt.woodrow, a=lizzard - The clipping rectangle used in a call to Matrix4x4::TransformAndClipRect   within CompositorOGL::DrawQuad is now using mRenderBound, with an   offset applied consistent with use later in the function.

--HG--
extra : source : c90bfcd824e2df8e25e9b2eedf690ffac2df38fd